Intrpduce /api/user/all_rings_records and put various more fixes
