# docs/swagger.json
@@ -16,6 +16,63 @@
     "host": "localhost",
     "basePath": "/wellness",
     "paths": {
+        "/api/user/all_rings_records": {
+            "get": {
+                "security": [
+                    {
+                        "UserAuth": []
+                    }
+                ],
+                "description": "Retrieves all user ring record",
+                "tags": [
+                    "Client-RingsRecords"
+                ],
+                "operationId": "GetUserAllRingRecords",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "offset",
+                        "name": "offset",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "limit - limit the result",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "order - Possible values: asc, desc. Default: desc",
+                        "name": "order",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "start_date - Start date filter in milliseconds as an integer epoch value",
+                        "name": "start_date",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "end_date - End date filter in milliseconds as an integer epoch value",
+                        "name": "end_date",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/RingRecord"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/user/rings": {
             "get": {
                 "security": [
@@ -189,7 +246,7 @@
                         "UserAuth": []
                     }
                 ],
-                "description": "Retrieves all user ring record",
+                "description": "Retrieves all user ring record for a ring id",
                 "tags": [
                     "Client-RingsRecords"
                 ],
@@ -771,6 +828,9 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "ring_id": {
                     "type": "string"
                 },
                 "unit": {
